deploy/yamls/sample-class-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: sample-class
  name: sample-class
spec:
  ports:
    - name: port-8080
      port: 8080
      targetPort: 8080
  selector:
    move2kube.konveyor.io/service: sample-class
  type: ClusterIP
status:
  loadBalancer: {}
